URIを使用してURLを生成するように修正し、例外処理を改善